--- a/src/style.css
+++ b/src/style.css
@@ -1,89 +1,170 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
+.container{
+  width: 90%;
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.flex{
+  display: flex;
 }
+
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* header */
+
+header{
+  background-color: #FF6900 ;
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.228);
+}
+
+.container.flex{
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.container .menu li{
+  list-style: none;
+  display: inline;
+}
+
+.container .menu li a{
+  text-decoration: none;
+  color: white;
+}
+
+.container .menu:first-child li a{
+  margin-right: 10px ;
+}
+
+.container .menu:last-child li a{
+  margin-left: 10px ;
+}
+
+#logo{
+  width: 100px;
+}
+
+/* main */
+main{
+  padding-top: 120px;
+}
+
+.product{
+  position:relative;
+  width:calc(100% / 3.1);
+  margin-bottom: 60px;
+  min-width: 280px;
+}
+
+.cards{
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.model{
+  width:100%;
+  height: auto;
+  cursor: pointer;
+}
+
+.model.part{
+  display: block;
+}
+
+.model.view{
+  display: none;
+}
+
+.trasp:hover .model.part{
+  display: none;
+}
+
+.trasp:hover .model.view{
+  display: block;
+}
+
+.heart{
+  position: absolute;
+  top: 10px;
+  right: 0px;
+  background-color: white;
+  padding: 5px 10px;
+  font-size: 1.5rem;
+}
+
+.heart:hover{
+  color: red;
+  cursor: pointer;
+}
+
+.label{
+  position: absolute;
+  bottom: 100px;
+  color: white;
+  font-weight: 700;
+  font-size: .8rem;
+}
+
+.sale{
+  background-color: red;
+  padding: 5px 10px;
+}
+
+.eco{
+  background-color: green;
+  padding: 5px 10px;
+}
+
+.brand{
+  display: block;
+  font-size: 0.9rem;
+}
+
+.price-special{
+  font-weight: 700;
+  color: red;
+}
+
+.price{
+  text-decoration:line-through;
+  font-weight: 700;
+}
+
+.title{
+  text-transform: uppercase;
+}
+
+/* footer */
+
+footer{
+  background-color: #1A1A1A;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid white;
+  color: white;
+}
+
+.foot-list li{
+  list-style: none;
+  display: inline-block;
+  padding-top: 10px;
+}
+
+.foot-list li a{
+  text-decoration: none;
+  color: white;
+  margin-right: 8px;
+}
+
