--- a/src/style.css
+++ b/src/style.css
@@ -156,6 +156,10 @@ footer{
   color: white;
 }
 
+.foot-list{
+  justify-content: space-between;
+}
+
 .foot-list li{
   list-style: none;
   display: inline-block;
@@ -165,6 +169,5 @@ footer{
 .foot-list li a{
   text-decoration: none;
   color: white;
-  margin-right: 8px;
 }
 
