--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,89 +1,90 @@
 /* main */
 main{
   padding-top: 120px;
+  padding-bottom: 50px;
   
   .cards{
     flex-wrap: wrap;
     align-items: center;
 
     .product{
-      position:relative;
-      width:calc(100% / 3.1);
-      margin-bottom: 60px;
-      min-width: 280px;
+        position:relative;
+        width:calc(100% / 3.1);
+        margin-bottom: 60px;
+        min-width: 280px;
+        margin: 20px 5px;
 
-      .model{
-        width:100%;
-        height: auto;
-        cursor: pointer;
-    
-        &.part{
-          display: block;
+        .model{
+          width:100%;
+          height: auto;
+          cursor: pointer;
+      
+          &.part{
+            display: block;
+          }
+      
+          &.view{
+            display: none;
+          }
         }
-    
-        &.view{
+
+        .trasp:hover .model.part{
           display: none;
         }
-      }
-
-      .trasp:hover .model.part{
-        display: none;
-      }
-      :hover .model.view{
-        display: block;
-      }
-
-      .heart{
-        position: absolute;
-        top: 10px;
-        right: 0px;
-        background-color: white;
-        padding: 5px 10px;
-        font-size: 1.5rem;
-
-        &:hover{
-          color: red;
-          cursor: pointer;
+        :hover .model.view{
+          display: block;
         }
-      }
-      .label{
-        position: absolute;
-        bottom: 100px;
-        color: white;
-        font-weight: 700;
-        font-size: .8rem;
-    
-        .sale{
-          background-color: red;
+
+        .heart{
+          position: absolute;
+          top: 10px;
+          right: 0px;
+          background-color: white;
           padding: 5px 10px;
+          font-size: 1.5rem;
+
+          &:hover{
+            color: red;
+            cursor: pointer;
+          }
+        }
+        .label{
+          position: absolute;
+          bottom: 100px;
+          color: white;
+          font-weight: 700;
+          font-size: .8rem;
+      
+          .sale{
+            background-color: red;
+            padding: 5px 10px;
+          }
+          
+          .eco{
+            background-color: green;
+            padding: 5px 10px;
+          }
+        }
+
+        .brand{
+          display: block;
+          font-size: 0.9rem;
         }
         
-        .eco{
-          background-color: green;
-          padding: 5px 10px;
+        .price-special{
+          font-weight: 700;
+          color: red;
+        }
+        
+        .price{
+          text-decoration:line-through;
+          margin-left: 5px;
+          font-weight: 700;
+        }
+        
+        .title{
+          text-transform: uppercase;
         }
       }
-
-      .brand{
-        display: block;
-        font-size: 0.9rem;
-      }
-      
-      .price-special{
-        font-weight: 700;
-        color: red;
-      }
-      
-      .price{
-        text-decoration:line-through;
-        margin-left: 5px;
-        font-weight: 700;
-      }
-      
-      .title{
-        text-transform: uppercase;
-      }
-    }
-
     }
   }
