--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -69,6 +69,7 @@ main{
         .brand{
           display: block;
           font-size: 0.9rem;
+          margin-top: 10px;
         }
         
         .price-special{
